# cookiecutter-python-package

./: README.md  cookiecutter.json
{{ cookiecutter.package_name }}/: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  release.sh  {% if cookiecutter.build_tool == 'flit' %}Makefile{% endif %}  {% if cookiecutter.build_tool == 'flit' %}pyproject.toml{% endif %}  {% if cookiecutter.build_tool == 'poetry' %}Makefile{% endif %}  {% if cookiecutter.build_tool == 'poetry' %}pyproject.toml{% endif %}
{{ cookiecutter.package_name }}/.github/workflows/: publish.yml  test.yml
