[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.github_username }}"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.package_name }}"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
isort = "^5.7"
flake8 = "^3.8.4"
black = "==23.3.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.core.masonry.api"
